// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TimelinePosts - Snapshots > should match snapshot for empty state 1`] = `
<div>
  <div
    data-testid="timeline-empty"
  >
    No posts
  </div>
</div>
`;

exports[`TimelinePosts - Snapshots > should match snapshot for error state 1`] = `
<div>
  <div
    data-testid="timeline-initial-error"
  >
    Error: 
    Network error
  </div>
</div>
`;

exports[`TimelinePosts - Snapshots > should match snapshot for loading state 1`] = `
<div>
  <div
    data-testid="timeline-loading"
  >
    Loading...
  </div>
</div>
`;

exports[`TimelinePosts - Snapshots > should match snapshot with posts 1`] = `
<div>
  <div
    data-cy="timeline-container"
    data-testid="container"
  >
    <div
      class="space-y-4"
      data-cy="timeline-posts"
      data-testid="container"
    >
      <div
        data-cy="post-card"
        data-testid="container"
      >
        <div
          data-testid="post-author1:post1"
        />
        <div
          data-testid="replies-author1:post1"
        />
      </div>
      <div
        data-cy="post-card"
        data-testid="container"
      >
        <div
          data-testid="post-author2:post2"
        />
        <div
          data-testid="replies-author2:post2"
        />
      </div>
      <div
        data-cy="post-card"
        data-testid="container"
      >
        <div
          data-testid="post-author3:post3"
        />
        <div
          data-testid="replies-author3:post3"
        />
      </div>
      <div
        class="h-5"
        data-testid="container"
      />
    </div>
  </div>
</div>
`;
